Issue #3336522 by csakiistvan: Native browser icons are black in dark mode

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -28,6 +28,10 @@ $maxWidth: 520px;
     border-color: var(--gin-color-disabled-border);
     box-shadow: none;
   }
+
+  .gin--dark-mode & {
+    color-scheme: dark;
+  }
 }
 
 .form-textarea-wrapper {
